# likewise-open

./: .gitignore  .gitmodules  .travis.yml  Build.sh  Configure.sh  HyperMake  LICENSE  Makefile  PROVENANCE  README  README.Photon.md  README.deb  autogen.sh  build.sh  djpamconf.patch  mklocal  testfile
centutils/: MakeKitBuild  Makefile.in  autogen.sh  configure.in  mkinstalldirs
centutils/include/: config.h.in  ctarray.h  cterr.h  cterr_catalog.h  ctsysfuncs.h
centutils/libcentutils/: Makefile.in  ctarray.c  ctarray.h  ctbase.h  ctcfgparser.c  ctcfgparser.h  ctdef.h  cterr.c  cterr.h  cterr_catalog.h  ctexec.c  ctexec.h  ctfileutils.c  ctfileutils.h  ctgroup.c  ctgroup.h  cthash.c  cthash.h  ctmem.c  ctmem.h  ctprefdc.c  ctprefdc.h  ctprocutils.c  ctprocutils.h  ctrwlock.c  ctrwlock.h  ctshell.c  ctshell.h  ctstrutils.c  ctstrutils.h  ctsys.h  ctsysfuncs.c  cttext.c  cttext.h  ctuser.c  ctuser.h  lwexc.c  lwexc.h  sysfuncs.c  sysfuncs.h
centutils/libgpglib/: Makefile.in  lwghash.c  lwghash.h  lwglib.h  lwglist.c  lwglist.h  lwgmissing.c  lwgmissing.h  lwgprimes.c  lwgprimes.h
centutils/test/: Makefile.in  test_ctshell.c
domainjoin/: INTRO.txt  MakeKitBuild  Makefile.in  README.txt  autogen.sh  configure.in
domainjoin/include/: DomainJoinConfig.h.in
domainjoin/join/: common.c  error.c  externs.h  globals.c  includes.h  join.c  libmain.c  query.c
domainjoin/krb5/: Makefile.am  externs.h  globals.c  krbtgt.c  krbtgt.h  lsakrb.h  lsakrb5.c  lsakrb5_p.h
domainjoin/ldap/: Makefile.am  includes.h  lsaldap_p.h
domainjoin/libcentutils/: Makefile.in  ctarray.c  ctarray.h  ctbase.h  ctcfgparser.c  ctcfgparser.h  ctdef.h  cterr.c  cterr.h  cterr_catalog.h  ctexec.c  ctexec.h  ctfileutils.c  ctfileutils.h  ctmem.c  ctmem.h  ctprefdc.c  ctprefdc.h  ctprocutils.c  ctprocutils.h  ctstrutils.c  ctstrutils.h  ctsys.h  lwexc.c  lwexc.h  sysfuncs.c  sysfuncs.h
domainjoin/libdomainjoin/: MakeKitBuild
domainjoin/lsaunistr/: includes.h
domainjoin/scripts/: Centeris.pm  CenterisPam.pm  ConfigureKrb5.in  ConfigureKrb5.pl  ConfigureLogin.in  ConfigureLogin.sh.in  ConfigurePamForADLogin  ConfigureShellPrompt  ConfigureSshForGssapi  ConfigureSshForGssapi.pl  Makefile  dev_configure.sh  domainjoin-cli  domainjoin-cli.in  gpcron.in  gpcron.sh.in
domainjoin/tests/: MakeKitBuild  Makefile.in
eventlog/client/: Makefile.am  binding.c  binding_p.h  eventlog.c  legacy.c  lwmsg-client.c  lwmsg-client.h
eventlog/server/: MakeKitBuild  Makefile.am  db.c  db_p.h  externs.h  includes.h  listener-lwmsg.c  listener-lwmsg.h  main.c  main_p.h  security.c  security_p.h  server-lwmsg.c  server-lwmsg.h  server.c  server_p.h
libkeytab/ktkrb5/: Makefile.am  keytab.c  keytab_w16.c  krbtgt.c  ktkrb5.c  ldap.c  ldap_w16.c
librpc/: LibRpc.sln  Makefile.am  configure.ac  makectags.sh
librpc/Alloc/: Allocate.c  Makefile.am
librpc/Error/: Makefile.am  Status.c
librpc/Idl/: krb5pac.idl  lsa.idl  netlogon.idl  samr.idl  security.idl  types.idl
librpc/Include/: DceSupport.h  LMnotimpl.h  Makefile.am  byteops.h  crypto.h  ldaperr.h  md5.h  ntstatus.inc
librpc/Krb5Pac/: Krb5Pac.c  Makefile.am  includes.h
librpc/Lsa/: Lsa.cpp  Lsa.def  Lsa.vcproj  LsaBinding.c  LsaClose.c  LsaLookupNames.c  LsaLookupNames2.c  LsaLookupNames3.c  LsaLookupSids.c  LsaMemory.c  LsaMemory.h  LsaOpenPolicy2.c  LsaQueryInfoPolicy.c  LsaQueryInfoPolicy2.c  LsaStubMemory.c  LsaStubMemory.h  LsaUtil.h  Makefile.am  ReadMe.txt  externs.h  globals.c  includes.h  lsa.acf  lsa_stub.h  stdafx.cpp
librpc/Mpr/: Makefile.am  WNetAddConnection2.c  WNetCancelConnection2.c  includes.h
librpc/MsRpc/: LMcrypt.c  Makefile.am  MemPtr.c  SidHelper.c  UnicodeString.c  UnicodeStringEx.c  des.c  destest.c  errcheck.c  md4.c  md5.c  md5test.c  random.c  rc4.c  smbcrypto.c
librpc/NetLib/: GroupInfo.c  GroupInfo.h  JoinLocal.c  JoinLocal.h  LdapUtil.c  LdapUtil.h  MachinePassword.c  MachinePassword.h  Makefile.am  NetApiBufferFree.c  NetConnection.c  NetConnection.h  NetDebug.c  NetGetDcName.c  NetGetDcName.h  NetGetDomainName.c  NetHostInfo.c  NetInfo.h  NetJoinDomain.c  NetLib.cpp  NetLib.vcproj  NetLibUserInfo.c  NetLibUserInfo.h  NetLocalGroupAdd.c  NetLocalGroupDel.c  NetLocalGroupEnum.c  NetLocalGroupGetInfo.c  NetLocalGroupGetMembers.c  NetLocalGroupMembers.c  NetLocalGroupSetInfo.c  NetMachineChangePassword.c  NetMemory.c  NetNotImplemented.c  NetUnjoinDomain.c  NetUser.c  NetUserAdd.c  NetUserChangePassword.c  NetUserDel.c  NetUserEnum.c  NetUserGetInfo.c  (+22 more)
librpc/Netlogon/: DsrEnumerateDomainTrusts.c  DsrGetDcName.c  Makefile.am  NetlogonBinding.c  NetrCredentials.c  NetrCredentials.h  NetrEnumerateTrustedDomainsEx.c  NetrGetDomainInfo.c  NetrMemory.c  NetrMemory.h  NetrSamLogoff.c  NetrSamLogon.c  NetrSamLogonEx.c  NetrSchannel.c  NetrServerAuthenticate.c  NetrServerAuthenticate2.c  NetrServerAuthenticate3.c  NetrServerReqChallenge.c  NetrStubMemory.c  NetrStubMemory.h  NetrUtil.h  externs.h  globals.c  includes.h  netlogon_stub.h  schannel.c
librpc/Samr/: Makefile.am  ReadMe.txt  Samr.c  Samr.vcproj  SamrAddAliasMember.c  SamrBinding.c  SamrChangePasswordUser2.c  SamrClose.c  SamrConnect2.c  SamrConnect3.c  SamrConnect4.c  SamrConnect5.c  SamrCreateDomAlias.c  SamrCreateDomGroup.c  SamrCreateUser.c  SamrCreateUser2.c  SamrDeleteAliasMember.c  SamrDeleteDomAlias.c  SamrDeleteDomGroup.c  SamrDeleteUser.c  SamrEnumDomainAliases.c  (+33 more)
libsecdesc/: Makefile.am  configure.ac
libsmbclient/: Makefile.am  autogen.sh  configure.ac
libunistr/: Makefile.am  autogen.sh  buildtool.nant.xml  configure.ac  libunistr.dll.manifest  libunistr.vcproj  wc16printf.c  wc16str.c
lsass/: MakeKitBuild  Makefile.am  configure.in
lwadvapi/: MakeKitBuild  Makefile.am  configure.ac
lwbase/: MakeKitBuild  Makefile.am  buildtool.nant.xml  configure.ac  lwbase.vcproj
lwio/: MakeKitBuild  Makefile.am  configure.ac
lwio-fuse/: autogen.sh  configure.ac
lwmapsecurity/: Makefile.am  configure.ac
lwrdr/: Makefile.am  configure.ac
lwreg/: LICENSE  MakeKitBuild  Makefile.am  README  configure.in
npcmuxer/: LICENSE  Makefile.am  configure.ac
(+11132 files in other folders)
